Fixed meta spacing for excerpts.

--- a/annotum-base/assets/main/css/main.css
+++ b/annotum-base/assets/main/css/main.css
@@ -99,7 +99,7 @@ form.search .type-submit{background:url(../img/sprite-y.8bit.png) 0 -100px no-re
 .article .to-top a{background:#006B94;color:#fff;font-weight:bold;padding:4px 8px;}
 .article-excerpt{border-bottom:#ccc solid 1px;margin-bottom:27px;padding-bottom:15px;overflow:hidden;}
 .article-excerpt .header .title{font:bold 18px Georgia, Serif;margin-bottom:5px;}
-.article-excerpt .header .meta{color:#666;font:italic 13px Georgia, Serif;margin-bottom:10px;}
+.article-excerpt .header .meta{color:#666;font:italic 13px Georgia, Serif;margin:0 0 10px;}
 .article-excerpt .sep{padding:0 2px;}
 .article-excerpt-container .has-featured-image .content{height:auto !important;height:122px;min-height:122px;position:relative;padding-left:155px;zoom:1;}
 .article-excerpt-container .has-featured-image img{left:0;position:absolute;top:2px;}
