--- a/annotum-base/assets/main/less/article-excerpt.less
+++ b/annotum-base/assets/main/less/article-excerpt.less
@@ -11,7 +11,7 @@
 .article-excerpt .header .meta {
 	color: #666;
 	font: italic 13px Georgia, Serif;
-	margin-bottom: 10px;
+	margin: 0 0 10px;
 }
 .article-excerpt .sep {
 	padding: 0 2px;
